pgmq-rs/src/install/snapshots/pgmq__install__version__tests__from_str_err_invalid_segment_values.snap
---
source: src/install/version.rs
expression: version
---
Err(
    InstallationError(
        "Invalid version: 'a.b.c'",
    ),
)
