pgmq-rs/src/install/snapshots/pgmq__install__version__tests__from_str_err_not_enough_segments.snap
---
source: src/install/version.rs
expression: version
---
Err(
    InstallationError(
        "Invalid version: '1.2'",
    ),
)
