pgmq-rs/src/install/snapshots/pgmq__install__version__tests__get_pgmq_version_err_invalid_version.snap
---
source: src/install/version.rs
expression: pgmq_version
---
Err(
    InstallationError(
        "Invalid version: 'a.b.c'",
    ),
)
