pgmq-rs/src/install/snapshots/pgmq__install__version__tests__get_pgmq_version_err_missing_quotes.snap
---
source: src/install/version.rs
expression: pgmq_version
---
Err(
    InstallationError(
        "Unable to extract version from extension config: default_version = 1.11.0",
    ),
)
