pgmq-rs/src/install/snapshots/pgmq__install__version__tests__get_pgmq_version_err_version_not_present.snap
---
source: src/install/version.rs
expression: pgmq_version
---
Err(
    InstallationError(
        "Version is not present in extension config",
    ),
)
