pgmq-rs/src/install/snapshots/pgmq__install__version__tests__get_pgmq_version_no_whitespace.snap
---
source: src/install/version.rs
expression: pgmq_version
---
Version {
    major: 1,
    minor: 11,
    patch: 0,
}
